<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentAddUpdateFee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gym Membership price"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_1_month_fee"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtOneMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/_0_00"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_3_months"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtThreeMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/_0_00"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_6_months"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtSixMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/_0_00"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_1_year"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtOneYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/_0_00"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_3_year"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtThreeYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/_0_00"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnAddMemberShip"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>